fixed some pathing errors in the menu component. Did some formatting on the spacing between links

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -147,3 +147,8 @@
       width: 80vw;
     }
   }
+
+  .nav-link{
+    font-family: 'Roboto', sans-serif;
+    color: #2699FB !important;
+  }
